# example-sparkfun-ccs811-himax

./: .gitignore  README.md
classification/: CMakeLists.txt  README.md  main.cc
classification/image_gen_linux/: out.img
classification/model-parameters/: dsp_blocks.h  model_metadata.h
classification/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
read-sensor/: CMakeLists.txt  README.md  main.cc  memory.lcf
read-sensor/image_gen_linux/: out.img
